--- a/storefront-child/build_assets/scss/blocks/_shop.scss
+++ b/storefront-child/build_assets/scss/blocks/_shop.scss
@@ -84,8 +84,6 @@
                 @media (max-width: 650px) {
                     padding-bottom: 24px;
                     column-gap: 14px;
-                }
-                @media (max-width: 390px) {
                     flex-direction: column;
                 }
                 &__image {
@@ -98,12 +96,12 @@
                         width: calc(40% - 12px);
                     }
                     @media (max-width: 650px) {
-                        width: calc(45% - 7px);
+                        width: 100%;
+                        height: 328px;
+                        margin-bottom: 16px;
                     }
                     @media (max-width: 390px) {
-                        width: 100%;
                         height: 164px;
-                        margin-bottom: 16px;
                     }
                 }
                 &__text-button {
@@ -112,9 +110,6 @@
                         width: calc(60% - 12px);
                     }
                     @media (max-width: 650px) {
-                        width: calc(55% - 7px);
-                    }
-                    @media (max-width: 390px) {
                         width: 100%;
                     }
                     &__text {
@@ -484,8 +479,30 @@
                     right: 0;
                     bottom: 0;
                     z-index: 1;
+                }
+
+                p {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    z-index: 0;
+                    font-size: 16px;
+                    font-weight: 500;
+                    width: 60%;
+                    color: white;
+                    text-align: center;
+                    opacity: 0;
+                    transition: opacity 0.5s ease;
                     &:hover {
-                        filter: grayscale(100%);
+                        color: black;
+                    }
+                }
+
+                &:hover {
+                    p {
+                        z-index: 2;
+                        opacity: 1;
                     }
                 }
 
@@ -721,4 +738,5 @@
 }
 .im-disabled{
     pointer-events: none;
+    background-color: $mercury !important;
 }
